test/e2e/features/http_acl/testdata/acl-merge.yaml
---
# ACL's attached to the same route get deep merged together if no conflict
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-route
  namespace: kgateway-base
spec:
  hostnames:
    - httpbin
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: kgateway-base
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: httpbin
          port: 8000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: route-acl-merge-1
  namespace: kgateway-base
spec:
  targetRefs:
    - kind: HTTPRoute
      group: gateway.networking.k8s.io
      name: httpbin-route
  acl:
    defaultAction: allow
    rules:
      - name: block-internal-range
        cidrs:
          - "10.0.0.0/8"
        action: deny
      - name: allow-trusted-subnet
        cidrs:
          - "10.1.0.0/16"
        action: allow
    denyResponse:
      statusCode: 403
      blockedByHeaderName: X-Blocked-By
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: route-acl-merge-2
  namespace: kgateway-base
spec:
  targetRefs:
    - kind: HTTPRoute
      group: gateway.networking.k8s.io
      name: httpbin-route
  acl:
    defaultAction: allow
    rules:
      - name: block-private-range
        cidrs:
          - "192.168.0.0/24"
        action: deny
    denyResponse:
      statusCode: 403
      blockedByHeaderName: X-Blocked-By
