test/e2e/features/http_acl/testdata/setup.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: httpbin
  namespace: kgateway-base
---
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: kgateway-base
  labels:
    app.kubernetes.io/name: httpbin
    service: httpbin
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8080
  selector:
    app.kubernetes.io/name: httpbin
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
  namespace: kgateway-base
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: httpbin
      version: v1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: httpbin
        version: v1
    spec:
      serviceAccountName: httpbin
      containers:
        - image: docker.io/mccutchen/go-httpbin:v2.6.0
          imagePullPolicy: IfNotPresent
          name: httpbin
          command: [go-httpbin]
          args:
            - "-port"
            - "8080"
            - "-max-duration"
            - "600s"
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "100m"
            limits:
              cpu: "200m"
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: ListenerPolicy
metadata:
  name: use-remote-address-false
  namespace: kgateway-base
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
  default:
    httpSettings:
      useRemoteAddress: false
