test/e2e/features/http_acl/testdata/valid-acl-only.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: httpbin-route
  namespace: kgateway-base
spec:
  hostnames:
    - httpbin
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: kgateway-base
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: httpbin
          port: 8000
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.kgateway.dev/v1alpha1
kind: TrafficPolicy
metadata:
  name: valid-acl-policy
  namespace: kgateway-base
spec:
  targetRefs:
    - name: httpbin-route
      kind: HTTPRoute
      group: gateway.networking.k8s.io
  acl:
    defaultAction: allow
    rules:
      - cidrs:
          - "192.168.0.0/16"
        action: deny
